Make format task partially incremental, chunk its input files, generate format reports