@@ -1,59 +1,26 @@
 package io.github.usefulness.tasks
 
-import io.github.usefulness.tasks.format.FormatWorkerAction
+import io.github.usefulness.support.KtlintRunMode
 import org.gradle.api.file.ProjectLayout
-import org.gradle.api.file.RegularFileProperty
 import org.gradle.api.model.ObjectFactory
-import org.gradle.api.tasks.Optional
-import org.gradle.api.tasks.OutputFile
 import org.gradle.api.tasks.TaskAction
 import org.gradle.work.InputChanges
-import org.gradle.workers.WorkerExecutionException
 import org.gradle.workers.WorkerExecutor
 import javax.inject.Inject
 
 public open class FormatTask @Inject constructor(
-    private val workerExecutor: WorkerExecutor,
+    workerExecutor: WorkerExecutor,
     objectFactory: ObjectFactory,
-    private val projectLayout: ProjectLayout,
+    projectLayout: ProjectLayout,
 ) : KtlintWorkTask(
+    workerExecutor = workerExecutor,
     projectLayout = projectLayout,
     objectFactory = objectFactory,
 ) {
 
-    @OutputFile
-    @Optional
-    public val report: RegularFileProperty = objectFactory.fileProperty()
-
-    init {
-        outputs.upToDateWhen { false }
-    }
-
     @TaskAction
-    public fun run(inputChanges: InputChanges) {
-        val workQueue = workerExecutor.processIsolation { spec ->
-            spec.classpath.setFrom(ktlintClasspath, ruleSetsClasspath)
-            spec.forkOptions { options ->
-                options.maxHeapSize = workerMaxHeapSize.get()
-                options.jvmArgs = listOf("--add-opens=java.base/java.lang=ALL-UNNAMED") // https://github.com/gradle/gradle/issues/21013
-            }
-        }
-
-        workQueue.submit(FormatWorkerAction::class.java) { p ->
-            p.name.set(name)
-            p.files.from(getChangedSources(inputChanges))
-            p.projectDirectory.set(projectLayout.projectDirectory.asFile)
-            p.ktLintParams.set(getKtLintParams())
-            p.output.set(report)
-            p.changedEditorConfigFiles.from(getChangedEditorconfigFiles(inputChanges))
-        }
-
-        runCatching { workQueue.await() }
-            .onFailure { failure ->
-                when (failure) {
-                    is WorkerExecutionException -> throw failure.cause ?: failure
-                    else -> throw failure
-                }
-            }
-    }
+    public fun run(inputChanges: InputChanges): Unit = runKtlint(
+        inputChanges = inputChanges,
+        mode = KtlintRunMode.Format,
+    )
 }
